# thoth

./: .gitattributes  .gitignore  Benchmark.md  Cargo.toml  Dockerfile  LICENSE  README.md  benchmark.ipynb  build.rs  docker-compose.yml  draft_2.py  main.py  run_tests.sh
assets/benchmarks/: thoth_vs_pyspark_benchmark_three_machines.csv  thoth_vs_pyspark_benchmark_two_machines.csv
docs/: api.md  benchmarks.md
docs/api/: py_thoth.md
drawings/: messages.dio
grpc_proto/: mathop.proto
py_thoth/: README.md  setup.py
py_thoth/configs/: config.py  env_vars.py
py_thoth/operations/: matrices.py  vector.py
py_thoth/proto/: command.md  mathop_pb2.py  mathop_pb2_grpc.py
py_thoth/settings/: connections.py
py_thoth/utils/: util.py
python/: main.py
python/proto/: command.md
src/: README.md  lib.rs  main.rs
src/connections/: README.md  channels_node_info.rs  config.rs  connect.rs  mod.rs  nodes_info.rs  topics.rs  types.rs
src/connections/configs/: config.rs  mod.rs  topics.rs
src/db/: mod.rs  sqlite.rs
src/db/configs/: config.rs
src/db/controller/: mod.rs  registerer.rs  traits.rs
src/db/entities/: mod.rs  nodes_duties.rs  operations.rs  steps.rs  synced_ops.rs
src/errors/: mod.rs  thot_errors.rs
src/events/: back_office.rs  design.dio  events.rs  mod.rs  pool.rs
src/grpc/: grpc_server.rs  utils.rs
src/logger/: channels.rs  config.rs  log.rs  logger.rs  mod.rs  warnings_errors.rs
src/logger/writters/: configs.rs  mod.rs  traits.rs  utils.rs  writter.rs
src/operations/: README.md  base_operations.rs  checker.rs  mod.rs  operations.dio  requested_operations.rs
src/operations/cache/: objects.rs
src/operations/executer/: base_operations.rs  matrices.rs  mod.rs  traits.rs  types.rs
src/operations/gatherer/: channels.rs  gatherer.rs  mod.rs  structs.rs
src/operations/planner/: mod.rs  organizer.rs
src/operations/utils/: util.rs
src/router/: README.md  channels.rs  message_router.rs  messages.rs  mod.rs  traits.rs
src/structs/: README.md  displays.rs  mod.rs  structs.rs  traits.rs
src/syncer/: channels.rs  configs.rs  mod.rs  structs.rs  traits.rs
src/tests/: mod.rs
src/utils/: util.rs
thoth_python/: setup.py
thoth_python/proto/: mathop_pb2_grpc.py
(+31 files in other folders)
