[package]
name = "thoth"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.54", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic","ping"] }
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = "1.5.0"
serde = {version = "1.0.219",features = ["derive"]}
bincode = "2.0.1"
chrono = "0.4.41"
tonic = "0.13.1"
prost = "0.13.5"
tonic-health = "0.13.1"
protoc = "2.28.0"
sysinfo = "0.35.2"
uuid = {version = "1.17.0",features = ["v4"]}


[build-dependencies]
tonic-build = "0.13.1"
