[package]
name = "thoth"
version = "0.1.0"
edition = "2024"
description = "Thoth is a decentralized, distributed data computing."

[dependencies]
libp2p = { version = "0.56", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic","ping"] }
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = "1.5.0"
serde = {version = "1.0.219",features = ["derive"]}
bincode = "2.0.1"
chrono = {version = "0.4.41", features = ["serde"]}
tonic = "0.13.1"
prost = "0.13.5"
tonic-health = "0.13.1"
protoc = "2.28.0"
sysinfo = "0.35.2"
uuid = {version = "1.17.0",features = ["v4"]}
serde_json = "1.0.140"
sea-orm = { version = "1.1.13", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }
sea-orm-migration = "1.1.13"
rand = "0.9.2"

[build-dependencies]
tonic-build = "0.13.1"
